update stylesheet vars to align with new dashboard mockups

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -56,11 +56,13 @@ $secondary-pressed: #cecdd3;
 $grey-80: #465968;
 $grey-40: #8ea0ae;
 $grey-20: #cacccf;
+$grey-10: #f4f5f7;
 
 $blue-80: #6680ee;
 $blue-40: #acbbf3;
-$blue-20: #e3e7f7;
-$blue-5: #f9fafd;
+$blue-20: #ebeef7;
+$blue-10: #f9fafd;
+$blue-5: #fcfdfe;
 
 $colors: (
   text--primary: $text--primary,
