decrease space between title and subtitle

--- a/src/styles/components/textarea.scss
+++ b/src/styles/components/textarea.scss
@@ -16,6 +16,7 @@
       color: variables.$grey-40;
       font-size: 11px;
       padding-bottom: 0;
+      margin-top: -10px;
     }
   }
   .textarea-wrapper {
