--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -252,3 +252,65 @@ a {
     cursor: not-allowed;
   }
 }
+
+.pi-lg {
+  font-size: 1.33333em !important;
+  line-height: 0.75em;
+  vertical-align: -0.0667em;
+}
+
+.pi-xs {
+  font-size: 0.75em !important;
+}
+
+.pi-sm {
+  font-size: 0.875em !important;
+}
+
+.pi-1x {
+  font-size: 1em !important;
+}
+
+.pi-2x {
+  font-size: 2em !important;
+}
+
+.pi-3x {
+  font-size: 3em !important;
+}
+
+.pi-4x {
+  font-size: 4em !important;
+}
+
+.pi-5x {
+  font-size: 5em !important;
+}
+
+.pi-6x {
+  font-size: 6em !important;
+}
+
+.pi-7x {
+  font-size: 7em !important;
+}
+
+.pi-8x {
+  font-size: 8em !important;
+}
+
+.pi-9x {
+  font-size: 9em;
+}
+
+.pi-10x {
+  font-size: 10em !important;
+}
+
+.pi-fw {
+  display: inline-block;
+  height: 1em;
+  text-align: center;
+  vertical-align: -0.25em;
+  width: 1.25em;
+}
