set tooltip font size to 13 px

--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -17,6 +17,10 @@ $background: #090422;
   align-items: center;
 }
 
+.tooltip-content {
+  font-size: 13px;
+}
+
 .tooltip-content::after {
   content: '';
   position: absolute;
