--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $drop-shadow-lg: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.1))
   drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.05));
 $drop-shadow-xl: drop-shadow(0px 20px 25px rgba(0, 0, 0, 0.1))
   drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.04));
+$drop-shadow-2xl: drop-shadow(0px 25px 50px rgba(0, 0, 0, 0.25));
 
 // Colors
 // We'll want to namespace these by theme later
