--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -6,7 +6,7 @@
   outline: none; //needed for removing safari focus ring
   position: relative;
   &.active {
-    @include mixins.miter-shadow;
+    @include mixins.drop-shadow;
   }
   &:focus,
   &:focus-visible {
