Make sure the background color of cards isn't hard coded

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -21,7 +21,7 @@
 
   > div > section {
     align-content: flex-start;
-    background-color: variables.$white;
+    background-color: inherit;
     border-radius: 3px;
     display: flex;
     flex-direction: row;
