--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    padding: 32px;
+    padding: inherit;
 
     > section > article {
       align-content: flex-start;
