--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -10,6 +10,8 @@
     @include mixins.miter(2, 1);
   }
 
+  border-radius: 4px;
+
   > div {
     border: 1px solid variables.$grey-20;
     border-radius: 4px;
