--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -14,6 +14,10 @@
   justify-content: var(--position-place);
 }
 
+.popup {
+  background-color: variables.$white;
+}
+
 .close-icon {
   position: absolute;
   right: 35px;
