--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -36,6 +36,11 @@ $shadow-sizes: ('sm', 'md', 'lg', 'xl', '2xl');
 
     > section {
       flex-grow: 1;
+      border-radius: inherit;
+
+      > * {
+        border-radius: inherit;
+      }
     }
 
     > section > article {
