--- a/src/styles/components/popover.scss
+++ b/src/styles/components/popover.scss
@@ -3,15 +3,11 @@
 
 .container {
   @include mixins.miter(2, 1);
-
-  // height: 258.00048828125px;
-  // width: 263.7304992675781px;
-
-  border-radius: 4px;
-
   // height: 132px;
   // width: 347px;
-  margin-top: 50px;
+
+  width: auto;
+  height: auto;
 
   display: block;
   position: absolute;
@@ -29,32 +25,42 @@
   position: absolute;
   display: block;
 
-  // note: bottom
-  bottom: calc(100% - 7px);
-  left: 50%;
-  transform: translate(-50%) rotate(45deg);
-
-  // note: top
-  top: calc(100% - 7px);
-  left: 50%;
-  transform: translate(-50%) rotate(225deg);
-
-  // note: right
-  // bottom: 80%;
-  // right: 100%;
-  // transform: translate(50%) rotate(315deg);
-
-  // note: left
-  // bottom: 80%;
-  // bottom: calc(100% - 25px);
-  // left: 97%;
-  // transform: rotate(130deg);
-
   width: 12px;
   height: 12px;
 
   border: 1px solid;
   border-color: variables.$grey-20 transparent transparent variables.$grey-20;
-  // border-color: red transparent transparent red;
   background-color: white;
+}
+
+.top {
+  .arrow {
+    top: calc(100% - 7px);
+    left: 50%;
+    transform: translate(-50%) rotate(225deg);
+  }
+}
+
+.bottom {
+  .arrow {
+    bottom: calc(100% - 7px);
+    left: 50%;
+    transform: translate(-50%) rotate(45deg);
+  }
+}
+
+.right {
+  .arrow {
+    bottom: 80%;
+    right: 100%;
+    transform: translate(50%) rotate(315deg);
+  }
+}
+
+.left {
+  .arrow {
+    bottom: 80%;
+    left: calc(100% - 13px);
+    transform: translate(50%) rotate(130deg);
+  }
 }
