Fix issue with aside and header not inheriting border radius properly

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -11,6 +11,10 @@
   > div {
     border: 1px solid variables.$grey-20;
     border-radius: 4px;
+
+    > header {
+      border-radius: inherit;
+    }
   }
 
   display: block;
@@ -25,6 +29,10 @@
     flex-direction: row;
     justify-content: flex-start;
     padding: inherit;
+
+    > aside {
+      border-radius: inherit;
+    }
 
     > section {
       flex-grow: 1;
