--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -11,6 +11,9 @@
   > div {
     border: 1px solid variables.$grey-20;
     border-radius: 4px;
+    overflow: auto;
+    height: inherit;
+    width: inherit;
 
     > header {
       border-radius: inherit;
