--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -7,51 +7,63 @@
   }
 
   border-radius: 4px;
+  display: block;
+  flex: 0 0 auto;
+  height: min-content;
+  position: relative;
+  width: min-content;
 
   > div {
+    background-color: variables.$white;
     border: 1px solid variables.$grey-20;
     border-radius: 4px;
-    overflow: auto;
-    height: inherit;
-    width: inherit;
+    display: flex;
+    flex: 0 0 auto;
+    padding-left: inherit;
+    padding-right: inherit;
+    padding-top: inherit;
+    padding-bottom: inherit;
+    overflow: hidden;
 
     > header {
       border-radius: inherit;
     }
-  }
-
-  display: block;
-  height: min-content;
-  position: relative;
-
-  > div > section {
-    align-content: flex-start;
-    background-color: inherit;
-    border-radius: 3px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: inherit;
-
-    > aside {
-      border-radius: inherit;
-    }
 
     > section {
-      flex-grow: 1;
-      border-radius: inherit;
+      align-content: flex-start;
+      background-color: inherit;
+      border-radius: 3px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      padding: inherit;
 
-      > * {
+      > aside {
         border-radius: inherit;
       }
-    }
 
-    > section > article {
-      align-content: flex-start;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      overflow: auto;
+      > section {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        border-radius: inherit;
+        height: inherit;
+        width: inherit;
+
+        > article {
+          align-content: flex-start;
+          display: flex;
+          flex-direction: column;
+          flex-grow: 1;
+          height: inherit;
+          justify-content: flex-start;
+          overflow: auto;
+        }
+
+        > * {
+          border-radius: inherit;
+        }
+      }
     }
   }
 }
