Add outlined prop

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -13,9 +13,14 @@
   position: relative;
   width: min-content;
 
+  &.outlined {
+    > div {
+      border: 1px solid variables.$grey-20;
+    }
+  }
+
   > div {
     background-color: variables.$white;
-    border: 1px solid variables.$grey-20;
     border-radius: 4px;
     display: flex;
     flex: 0 0 auto;
