move icon buttons into their own component

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -99,10 +99,11 @@
     }
   }
 
-  &.icon {
+  &.icon-button {
     > :first-child {
       padding: 4px;
       background: transparent;
+      border: 1px solid variables.$inactive;
       color: variables.$grey-80;
     }
 
