Add flex grow global classes

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -133,6 +133,22 @@ $borders: (
   flex-direction: column-reverse !important;
 }
 
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
+.flex-shrink-1 {
+  flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
 .flex-nowrap {
   flex-wrap: nowrap;
 }
