--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -24,6 +24,7 @@
     border-radius: 4px;
     display: flex;
     flex: 0 0 auto;
+    flex-direction: column;
     padding-left: inherit;
     padding-right: inherit;
     padding-top: inherit;
