--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -2,99 +2,103 @@
 @use '../abstracts/mixins';
 
 .flexInput {
-  *, *:before, *:after {
+  *,
+  *:before,
+  *:after {
     box-sizing: border-box;
   }
   display: flex;
   align-items: flex-end;
   padding-bottom: 7px;
-  border-bottom:1px solid variables.$secondary-hover; 
-  width: 375px;
+  border-bottom: 1px solid variables.$secondary-hover;
   padding-left: 8px;
   padding-right: 8px;
   height: 53px;
   &.active {
-    border-bottom:1px solid variables.$primary; 
+    border-bottom: 1px solid variables.$primary;
   }
 
   &.disabled {
-    border-bottom:1px solid variables.$secondary-hover; 
-    *, *:before, *:after {
+    border-bottom: 1px solid variables.$secondary-hover;
+    *,
+    *:before,
+    *:after {
       opacity: 60%;
       cursor: not-allowed;
     }
   }
 
   &.invalid {
-    border-bottom:1px solid variables.$error; 
-    }
+    border-bottom: 1px solid variables.$error;
+  }
 
- &.hovered {
-  background-color: variables.$background
- }
-
+  &.hovered {
+    background-color: variables.$background;
+  }
 }
 
 .prepend {
-  *, *:before, *:after {
+  *,
+  *:before,
+  *:after {
     align-items: center;
   }
-    align-items: center;
-    display: flex;
-    justify-items: flex-end;
-    margin-right: 10px;
-    height: 40px;
+  align-items: center;
+  display: flex;
+  justify-items: flex-end;
+  margin-right: 10px;
+  height: 40px;
 }
 
 .append {
-    align-items: center;
-    display: flex;
-    justify-items: flex-end;
-    height: 40px;
-    margin-left: auto;
+  align-items: center;
+  display: flex;
+  justify-items: flex-end;
+  height: 40px;
+  margin-left: auto;
   &.active {
-    // *, *:before, *:after {
-    color: variables.$primary
-    // }
+    color: variables.$primary;
   }
 
   &.invalid {
-    *, *:before, *:after {
-    color: variables.$error
+    *,
+    *:before,
+    *:after {
+      color: variables.$error;
     }
-}
+  }
 }
 
 .input-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 15px;
-    height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 15px;
+  height: 40px;
 }
 
 .input-label {
   font-size: 11px;
   line-height: 14px;
-  padding-left:2px;
+  padding-left: 2px;
   margin-bottom: 4px;
   justify-content: center;
-  opacity: 80%
+  opacity: 80%;
 }
 
 .input {
-  border:0;
+  border: 0;
   line-height: 20px;
-&:focus {
-  border-color: transparent;
-  outline-style: none;
+  &:focus {
+    border-color: transparent;
+    outline-style: none;
   }
-&.hovered {
-  background-color: variables.$background
+  &.hovered {
+    background-color: variables.$background;
   }
-&.disabled {
-  background-color: transparent;
-}
+  &.disabled {
+    background-color: transparent;
+  }
 }
 
 .subtitle {
@@ -105,5 +109,3 @@
   margin-bottom: 0;
   padding-left: 2px;
 }
-
-
