--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -1,5 +1,4 @@
 @use '../abstracts/variables';
-@use '../abstracts/mixins';
 
 @mixin hide-scrollbars {
   /* Hide scrollbars */
@@ -14,26 +13,17 @@
 }
 
 .component-wrapper {
-  @include mixins.miter(2, 2);
   @include hide-scrollbars;
 
   $width: 227px;
   $left-margin: -24px;
-  $miter-width: 16px;
 
   overflow: hidden;
   white-space: nowrap;
 
   .border-container {
-    // Adding this gives consistent spacing for the miter cut
-    border-right: 2px solid transparent;
     border-bottom: 2px solid variables.$grey-20;
     position: relative;
-
-    // This is necessary because the miter mixin inherits the entire border property but we want only the bottom border
-    &:after {
-      border-left: 4px solid variables.$grey-20;
-    }
   }
 
   .overflow-button {
@@ -51,7 +41,7 @@
     }
 
     &.right {
-      @include mixins.miter-clip(2, 2);
+      // @include mixins.miter-clip(2, 2);
       right: 0;
     }
 
