--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -83,7 +83,7 @@
       height: 0;
       left: 0;
       position: absolute;
-      transition: all 200ms ease-out;
+      transition: all 250ms ease-in-out;
       width: $width;
       box-sizing: border-box;
     }
