--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -8,7 +8,7 @@
 body,
 .body {
   color: variables.$text--primary;
-  font-family: variables.$font--secondary !important;
+  font-family: variables.$font--primary !important;
   font-size: 16px;
   letter-spacing: -0.41px;
   line-height: 24px;
@@ -27,18 +27,26 @@ h6 {
   margin-block-end: 0.1em;
 }
 
+.font--primary {
+  font-family: variables.$font--primary !important;
+}
+
+.font--secondary {
+  font-family: variables.$font--secondary !important;
+}
+
 h1,
 .header {
   font-size: 24px;
   letter-spacing: 0.4px;
-  line-height: 48px;
+  line-height: 28px;
 }
 
 h2,
 .subheader {
   font-size: 20px;
   letter-spacing: 0.3px;
-  line-height: 40px;
+  line-height: 24px;
 }
 
 h3,
@@ -46,7 +54,7 @@ h3,
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.24px;
-  line-height: 34px;
+  line-height: 22px;
 }
 
 .font-weight-regular {
@@ -59,6 +67,11 @@ h3,
 
 .font-weight-bold {
   font-weight: 700;
+}
+
+.caption,
+.caption-small {
+  font-family: variables.$font--secondary;
 }
 
 .caption {
