--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -11,6 +11,7 @@
     @include mixins.miter;
   }
 
+  font-family: variables.$font--secondary;
   padding: 0;
   background: none;
   border: none;
