--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -47,6 +47,7 @@
 
     border: none;
     border-radius: 3px;
+    font-family: variables.$font--secondary;
     padding: 0;
     user-select: none;
     white-space: nowrap;
