--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -21,7 +21,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: variables.$black;
+  color: variables.$text--primary;
   font-family: variables.$font--primary !important;
   margin-block-start: 0.1em;
   margin-block-end: 0.1em;
