Increase base size of icons

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -117,10 +117,13 @@ h3,
   text-decoration: line-through;
 }
 
+.pi {
+  font-size: 24px;
+}
+
 .pi-lg {
-  font-size: 1.33333em !important;
-  line-height: 0.75em;
-  vertical-align: -0.0667em;
+  font-size: 1.25em !important;
+  line-height: 1.25em;
 }
 
 .pi-xs {
