--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,9 +1,10 @@
 $breakpoints: (
   '': '',
-  'xs': 640px,
-  'sm': 768px,
-  'md': 1024px,
-  'lg': 1280px
+  xs: 450px,
+  sm: 640px,
+  md: 1024px,
+  lg: 1280px,
+  xl: 1440px
 );
 
 $font--primary: Barlow;
