--- a/src/styles/components/tab.scss
+++ b/src/styles/components/tab.scss
@@ -5,14 +5,21 @@ button.tab {
   @include mixins.text-ellipsis;
   $width: 227px;
 
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
   background-color: transparent;
   border: none;
   border-bottom: 2px solid variables.$grey-20;
   height: max-content;
   border-radius: 4px 4px 0 0;
   cursor: pointer;
-  font-size: 15px;
-  padding: 12px 16px;
+  font-size: 18px;
+  line-height: 24px;
+  color: variables.$grey-80;
+  padding: 8px 8px;
   user-select: none;
   -webkit-user-select: none;
   transition: color 200ms ease-in;
