--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -39,6 +39,15 @@
     outline: none;
   }
 
+  &.icon {
+    [data-test='default'] {
+      vertical-align: middle;
+      i {
+        margin-right: 5px;
+      }
+    }
+  }
+
   &.primary {
     color: variables.$text--white;
 
