add story for text + icon button

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -41,9 +41,11 @@
 
   &.icon {
     [data-test='default'] {
-      vertical-align: middle;
+      display: inline-flex;
+      align-items: center;
+
       i {
-        margin-right: 5px;
+        margin-right: 10px;
       }
     }
   }
