--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -63,6 +63,7 @@
     width: 350px;
     position: absolute;
     background: variables.$white;
+    z-index: 10;
 
     &:not(.openUp) {
       @include mixins.miter-clip(2, 1);
