mid way through improving focus

--- a/src/styles/components/popover.scss
+++ b/src/styles/components/popover.scss
@@ -6,7 +6,8 @@
   background-color: variables.$white;
   width: auto;
   height: auto;
-
+  outline: none;
+  border: none;
   display: block;
   position: absolute;
   z-index: 2;
