add rounded prop && css

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -139,4 +139,10 @@
       color: variables.$grey-20 !important;
     }
   }
+
+  &.rounded {
+    :first-child {
+      border-radius: 50%;
+    }
+  }
 }
