--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -61,8 +61,8 @@ $drop-shadows: (
 // Colors
 // We'll want to namespace these by theme later
 $text--primary: #465968;
-$text--secondary: #cecdd3;
-$text--placeholder: #465968;
+$text--secondary: #8ea0ae;
+$text--placeholder: #cecdd3;
 $text--white: #ffffff;
 
 $inactive: #cecdd3;
@@ -86,6 +86,7 @@ $secondary-pressed: #cecdd3;
 
 $grey-80: #465968;
 $grey-40: #8ea0ae;
+$grey-30: #d2d9df;
 $grey-20: #cacccf;
 $grey-10: #f4f5f7;
 
@@ -117,6 +118,7 @@ $colors: (
   secondary-pressed: $secondary-pressed,
   grey-80: $grey-80,
   grey-40: $grey-40,
+  grey-30: $grey-30,
   grey-20: $grey-20,
   blue-80: $blue-80,
   blue-40: $blue-40,
