make placeholder a bit darker

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -62,7 +62,7 @@ $drop-shadows: (
 // We'll want to namespace these by theme later
 $text--primary: #465968;
 $text--secondary: #8ea0ae;
-$text--placeholder: #cecdd3;
+$text--placeholder: #8ea0ae;
 $text--white: #ffffff;
 
 $inactive: #cecdd3;
