horizontally center content

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -23,6 +23,7 @@
     display: flex;
     font-size: 14px;
     height: auto;
+    justify-content: center;
     padding: 12px 24px;
     user-select: none;
     background-clip: padding-box;
