increase importance of color classes

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -8,14 +8,14 @@
 
 @each $key, $color in variables.$colors {
   .bg--#{$key} {
-    background-color: #{$color};
+    background-color: #{$color} !important;
   }
 
   .text--#{$key} {
-    color: #{$color};
+    color: #{$color} !important;
   }
 
   .fill--#{$key} {
-    fill: #{$color};
+    fill: #{$color} !important;
   }
 }
