--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -58,7 +58,8 @@
 
   .list {
     @include mixins.input-transition;
-
+    max-height: 500px;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     width: 350px;
@@ -111,6 +112,7 @@
   }
 }
 .title {
+  min-height: 58px;
   text-transform: uppercase;
   font-weight: 700;
   color: variables.$grey-20;
@@ -118,6 +120,7 @@
 .option {
   cursor: pointer;
   font-size: 16px;
+  min-height: 58px;
   line-height: 20px;
   &:first-of-type {
     height: 74px;
