use font primary

--- a/src/styles/components/popover.scss
+++ b/src/styles/components/popover.scss
@@ -20,7 +20,7 @@
 
   header {
     :first-child &:not(i) {
-      font-family: Barlow !important;
+      font-family: variables.$font--primary !important;
       font-weight: 600;
 
       :first-child::before {
