--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -122,10 +122,15 @@
   font-size: 16px;
   min-height: 58px;
   line-height: 20px;
+  outline: none; //needed for removing safari focus ring
   &:first-of-type {
     height: 74px;
     margin-top: -16px;
     padding-top: 16px;
+  }
+  &:focus,
+  &:focus-visible {
+    outline: none !important; // also needed for focus rings
   }
 
   span {
