--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -16,8 +16,13 @@
 }
 
 .toast-container {
+  align-items: flex-end;
   bottom: 0;
-  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  max-height: 100vh;
+  // pointer-events: none;
   position: fixed;
   right: 0;
   z-index: 10;
