--- a/src/styles/components/toast.scss
+++ b/src/styles/components/toast.scss
@@ -8,10 +8,17 @@
   align-items: center;
   justify-content: space-between;
   margin: 16px;
+  transform: translate(0);
+  transition: all 150ms;
 
   .toast--content {
     background-color: variables.$primary;
     padding: 12px 24px;
+  }
+
+  .toast--close-button {
+    position: relative;
+    left: 15px;
   }
 }
 
@@ -21,8 +28,26 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  overflow-x: hidden;
   max-height: 100vh;
   position: fixed;
   right: 0;
   z-index: 10;
+}
+
+.slide-leave-active {
+  animation: slide 0.15s reverse ease-in-out forwards;
+}
+
+.slide-enter-active {
+  animation: slide 0.15s ease-in-out forwards;
+}
+
+@keyframes slide {
+  from {
+    transform: translate(100%);
+  }
+  to {
+    transform: translate(0);
+  }
 }
