--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -22,7 +22,6 @@
     border-radius: 4px;
     display: flex;
     font-size: 14px;
-    height: auto;
     justify-content: center;
     padding: 12px 24px;
     user-select: none;
@@ -59,6 +58,9 @@
       padding: 4px;
       background: transparent;
       border: 1px solid variables.$inactive;
+      font-size: 16px;
+      height: 24px;
+      width: 24px;
     }
 
     &.hovered > :first-child {
