Fix broken variable

--- a/src/styles/base/_spacing.scss
+++ b/src/styles/base/_spacing.scss
@@ -85,7 +85,7 @@ $directions: (
   }
 }
 
-@each $breakpoint, $value in $breakpoints {
+@each $breakpoint, $value in variables.$breakpoints {
   @if $breakpoint == '' {
     @include classesForBreakpoint($breakpoint);
   }
