--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -8,10 +8,11 @@
   height: 58px;
   width: 350px;
 
-  z-index: 2;
   &.active {
     @include mixins.drop-shadow;
+    z-index: 10;
   }
+
   &:focus,
   &:focus-visible {
     outline: none !important; // also needed for focus rings
@@ -26,21 +27,23 @@
     width: inherit;
     display: flex;
     align-items: center;
-    padding-left: 21px;
+    padding-left: 20px;
     color: variables.$grey-20;
     font-size: 16px;
     white-space: nowrap;
-    z-index: 2;
+
     span {
       width: 284px;
     }
     &.selected {
       color: variables.$text--primary;
     }
+
     i {
       @include mixins.input-transition;
       color: variables.$black;
     }
+
     &.disabled {
       background-color: variables.$secondary-background;
       cursor: not-allowed !important;
@@ -53,6 +56,7 @@
     &.hovered {
       border: 1px solid variables.$primary;
     }
+
     &.active i {
       @include mixins.input-transition;
       transform: rotate(180deg);
@@ -61,13 +65,16 @@
 
   .list {
     @include mixins.input-transition;
-    max-height: 500px;
-    overflow: auto;
+    background: variables.$white;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    left: 0;
+    max-height: 500px;
+    overflow: auto;
     position: absolute;
-    background: variables.$white;
+    top: 100%;
+    width: 100%;
+    z-index: -1;
 
     &:not(.openUp) {
       @include mixins.miter-clip(2, 1);
@@ -78,10 +85,12 @@
         @include mixins.miter-clip(2, 1);
       }
     }
+
     &.openUp {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
-      bottom: 58px;
+      bottom: 100%;
+      top: unset;
     }
 
     > * {
@@ -93,6 +102,7 @@
         border-bottom: 1px solid variables.$secondary-background;
       }
     }
+
     .search {
       font-size: 16px;
       color: variables.$grey-20;
@@ -115,12 +125,14 @@
     }
   }
 }
+
 .title {
   min-height: 58px;
   text-transform: uppercase;
   font-weight: 700;
   color: variables.$grey-20;
 }
+
 .option {
   cursor: pointer;
   font-size: 16px;
