--- a/src/styles/components/radio.scss
+++ b/src/styles/components/radio.scss
@@ -12,13 +12,14 @@
   display: inline-flex;
   font-size: 15px;
   line-height: 20px;
-  position: absolute;
+  position: relative;
 
   > input {
     margin-left: 6px;
     position: absolute;
     height: 0;
     width: 0;
+    display: none;
   }
 
   .radio-button {
