--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -8,7 +8,6 @@
 
   border-radius: 4px;
   display: block;
-  flex: 0 0 auto;
   height: min-content;
   position: relative;
   width: min-content;
@@ -41,7 +40,8 @@
       border-radius: 3px;
       display: flex;
       flex-direction: row;
-      height: inherit;
+      flex-grow: 1;
+      overflow: auto;
       justify-content: flex-start;
       padding: inherit;
       width: inherit;
@@ -62,6 +62,7 @@
           display: flex;
           flex-direction: column;
           flex-grow: 1;
+          flex-shrink: 1;
           justify-content: flex-start;
           overflow: auto;
         }
