add cursor: not-allowed; and disabled class to timepicker

--- a/src/styles/components/input--number.scss
+++ b/src/styles/components/input--number.scss
@@ -118,7 +118,8 @@
       margin: 0;
     }
 
-    &:disabled {
+    &.disabled {
+      cursor: not-allowed;
       background-color: transparent;
     }
 
